package pharma.Controller.subpanel;

public class Lottostorage {
}
